--- a/Widget/index.html
+++ b/Widget/index.html
@@ -19,6 +19,7 @@
 	apiready = function() {
 		var bMap = api.require('bMap');
 		var push = api.require('push');
+		//测试同步代码
 		api.openSlidLayout({
 			type: 'left',
 			leftEdge: 80,
@@ -34,7 +35,7 @@
 			}
 		}, function(ret) {});
 		api.lockSlidPane();
-	
+
 	};
 </script>
 
