--- a/Widget/index.html
+++ b/Widget/index.html
@@ -19,7 +19,7 @@
 	apiready = function() {
 		var bMap = api.require('bMap');
 		var push = api.require('push');
-		//测试同步代码2
+		//测试同步修改
 		api.openSlidLayout({
 			type: 'left',
 			leftEdge: 80,
